--- a/Deep_Learning/Hyperparamater_Tuning_MNIST_Fashion.ipynb
+++ b/Deep_Learning/Hyperparamater_Tuning_MNIST_Fashion.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Hyperparamater_Tuning_Fashion_MNIST.ipynb",
+      "name": "Hyperparamater_Tuning_MNIST_Fashion.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -816,7 +816,7 @@
         "id": "kUrQMRYUttdn"
       },
       "source": [
-        "The TANH model did slightly better than the RELU model. Both models did significantly better than the swish model. However, the TANH and RELU models are overfitting more than the swish model\n",
+        "The TANH model did slightly better than the RELU model on both the training and test data. Both models did significantly better than the swish model. However, the TANH and RELU models are overfitting more than the swish model\n",
         "\n",
         "We will use the TANH model for future hyperparameter tuning since it performed best."
       ]
@@ -1081,7 +1081,7 @@
         "id": "5ZkzpXsjzSnf"
       },
       "source": [
-        "The 128 neuron and 64 neuron model were significantly more accurate than the 12 neuron model. This is because a 12 neuron model cannot capture all the complexity of this dataset. The 128 nueron model performed slightly better than the 64 nueron model. It had slightly higher test accuracy and test loss. All 3 models are overfitting a bit. \n",
+        "The 128 neuron and 64 neuron model were significantly more accurate than the 12 neuron model on both the training and test set. This is because a 12 neuron model cannot capture all the complexity of this dataset. The 128 nueron model performed slightly better than the 64 nueron model on both training and test data. It had slightly higher test accuracy and test loss. All 3 models are overfitting a bit. \n",
         "\n",
         "We will use the 128 neuron model for future hyperparameter tuning since it performed best."
       ]
@@ -1308,7 +1308,7 @@
         "id": "vHruYzjE3iwX"
       },
       "source": [
-        "The smallest batch size (10) had the best test accuracy, but overfit the most and had the longest run time. As batch size increased model test performance dropped, but the model overfit less. This makes sense because a larger batch size means more training data is being passed through our model. So its not suprising that our model should overfit less when it has more data to train on.\n",
+        "The smallest batch size (10) had the best train and test accuracy, but overfit the most and had the longest run time. As batch size increased model test performance dropped, but the model overfit less. This makes sense because a larger batch size means more training data is being passed through our model. So its not suprising that our model should overfit less when it has more data to train on.\n",
         "\n",
         "Overall, the optimal number of layers was 7, the optimal activation function was tanh, the optimal number of nuerons was 128, and the optimal batch size was 10 (with the caveat of overfitting)."
       ]
